--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "next": "15.5.4",
+    "@supabase/supabase-js": "^2.39.7",
+    "react-mic": "^12.4.6"
   },
   "devDependencies": {
     "typescript": "^5",
