--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "next": "12.3.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.4",
     "@supabase/supabase-js": "^2.39.7",
-    "react-mic": "^12.4.6"
+    "react-media-recorder": "^1.6.2"
   },
   "devDependencies": {
     "typescript": "^5",
