--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "19.1.0",
     "next": "15.5.4",
     "@supabase/supabase-js": "^2.39.7",
-    "react-media-recorder": "^1.6.2"
+    "react-media-recorder": "^1.6.2",
+    "@google-cloud/speech": "^6.5.0"
   },
   "devDependencies": {
     "typescript": "^5",
